--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	</tr>
 	<td>
 			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="bruh" href="" style="display:inline-block;cursor:hand;"><img src="https://th.bing.com/th/id/R.45c68e504ead4e38ea4f691cc2664a53?rik=qdKTP7RoN7czgw&pid=ImgRaw&r=0" border="0"></a></div>
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="bruh" href="" style="display:inline-block;cursor:hand;"><img src="https://th.bing.com/th/id/OIP.VGQmpNMVpEqwMHGST2K8hgAAAA?pid=ImgDet&rs=1" border="0"></a></div>
 				<div class="Summary">
 					<a style="font-size:12px" href="https://lolgamerlollol.github.io/funnyblox.github.io-catalog2/">Face Section (Click to go there)</a></span>
 
